Configurando o banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,10 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
+#Configurando para gerar log em cada consulta no banco
 spring.jpa.show-sql=true
+
+#Configurando para formatar o sql e gerar ele de uma forma melhor de ler
 spring.jpa.properties.hibernate.format_sql=true
 
 # Configuração de criação da tabela, nas vesões mais recentes esse parametro vem como NONE.
