Criando repositório e serviços para categoria

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.url=jdbc:h2:mem:teste
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
@@ -12,5 +12,5 @@ spring.jpa.show-sql=true
 #Configurando para formatar o sql e gerar ele de uma forma melhor de ler
 spring.jpa.properties.hibernate.format_sql=true
 
-# Configuração de criação da tabela, nas vesões mais recentes esse parametro vem como NONE.
+# Configuracao de criacao da tabela, nas vesoes mais recentes esse parametro vem como NONE.
 spring.jpa.hibernate.ddl-auto=update
